cluster/apps/monitoring/librenms/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: librenms
  namespace: monitoring
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: librenms
