cluster/apps/monitoring/librenms/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: librenms
  namespace: monitoring
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "chart-box-outline"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-ips-only@kubernetescrd"
    external-dns/internal: "true"
spec:
  ingressClassName: traefik-internal
  tls:
    - secretName: "${SECRET_LAB_DOMAIN/./-}-tls"
      hosts:
        - librenms.${SECRET_LAB_DOMAIN}
  rules:
    - host: librenms.${SECRET_LAB_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: librenms
                port:
                  number: 8000
